...
    <string name="harness_state_available">使えます</string>
    <string name="harness_state_unavailable">使えません: %1$s</string>
    <string name="harness_state_unavailable_no_reason">使えません</string>
    <string name="harness_state_probing">確認しています…</string>
    <string name="harness_version">バージョン %1$s</string>
    <string name="harness_name_state">%1$s: %2$s</string>
    <string name="harness_refresh">再確認</string>
    <string name="harness_refresh_all">すべて再確認</string>
    <string name="harness_refresh_one">%1$s をもう一度確認</string>
    <string name="harness_refresh_offline">PC に接続していないため、ハーネスを確認できません</string>
    <string name="harness_refresh_failed">ハーネスを確認できませんでした: %1$s</string>
    <string name="harness_now_available">%1$s を使えるようになりました</string>
    <string name="harness_still_unavailable">%1$s はまだ使えません: %2$s</string>
...
